Fixed showing sidebar on mobile on initial page load

--- a/client/components/core/Sidebar/Sidebar.module.css
+++ b/client/components/core/Sidebar/Sidebar.module.css
@@ -7,7 +7,8 @@
   height: 100%;
   z-index: 100;
   transform: translateX(100%);
-  transition: 0.3s ease;
+  transition: transform 0.3s ease;
+  visibility: hidden;
 }
 
 .title {
@@ -30,6 +31,7 @@
 
 .isOpen {
   transform: translateX(0);
+  visibility: visible;
 }
 
 .overlay {
